# backend

./: .env.example  .gitignore  README.md  alembic.ini  database.db  pyproject.toml
app/: .gitignore  .pre-commit-config.yaml  main.py  openapi.yaml  pyproject.toml
app/core/: settings.py
app/db/: engine.py  session.py
app/dependencies/: session.py
app/models/: __init__.py  base.py  chats.py  complaints.py  deals.py  dislikes.py  dorms.py  faculties.py  likes.py  messages.py  neighbourhood.py  neighbourhoods.py  profiles.py  reactions.py  tags.py  universities.py  users.py
migrations/: env.py  script.py.mako
migrations/versions/: 414e21e0a6e8_initial_schema.py  95f39cef3923_initial_schema.py
