[project]
name = "app"
version = "0.1.0"
description = "RoomieMatch backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.8.1",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
    "alembic>=1.16.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.3.3",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    "E",
    "F",
    "FAST",
    "PL",
    "I",
    "ARG",
    "RET",
    "ASYNC",
    "B",
    "A",
    "ICN",
    "SLF",
    "SIM",
    "C90",
    "N",
    "W"
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = false
docstring-code-line-length = "dynamic"
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.6",
]
